--- a/themes/mosaic/scss/components/_multi-selector.scss
+++ b/themes/mosaic/scss/components/_multi-selector.scss
@@ -23,7 +23,11 @@
         bottom: 0;
         padding: 0.5rem 1rem;
         color: #000;
+    }
+
+    &__text {
         overflow: hidden;
+        max-height: 1.4rem;
     }
 
     &__options {
